--- a/CRUDProducts/CRUDProducts.UI/Views/Login/NewUser.cshtml
+++ b/CRUDProducts/CRUDProducts.UI/Views/Login/NewUser.cshtml
@@ -5,32 +5,42 @@
 
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-    <main>
+    <main class="vh-100">
 
-        <h1>Welcome to my app</h1>
+        <div class="text-center mt-5 mb-5">
+            <h1>Welcome to my app</h1>
+        </div>
+        
+        <div class="d-flex flex-column justify-content-center align-items-center">
+            <form method="post" asp-action="NewUser" class="p-5 w-25">
 
-        <form asp-action="NewUser">
+                <div class="mb-3">
+                    <label asp-for="MAIL_USR" class="form-label">Email</label>
+                    <input type="text" asp-for="MAIL_USR" class="form-control" />
+                    <span asp-validation-for="MAIL_USR" class="text-danger"></span>
+                </div>
 
-            <div class="mb-3">
-                <label asp-for="MAIL_USR" class="form-label">Email</label>
-                <input type="text" asp-for="MAIL_USR" class="form-control" />
-                <span asp-validation-for="MAIL_USR" class="text-danger"></span>
-            </div>
+                <div class="mb-3">
+                    <label asp-for="PASSWORD_USR" class="form-label">Password</label>
+                    <input type="password" asp-for="PASSWORD_USR" class="form-control" />
+                    <span asp-validation-for="PASSWORD_USR" class="text-danger"></span>
+                </div>
 
-            <div class="mb-3">
-                <label asp-for="PASSWORD_USR" class="form-label">Password</label>
-                <input type="text" asp-for="PASSWORD_USR" class="form-control" />
-                <span asp-validation-for="PASSWORD_USR" class="text-danger"></span>
-            </div>  
+                <div class="mb-3">
+                    <label for="password" class="form-label">Confirm Password</label>
+                    <input id="password" type="password" class="form-control" name="password" />
+                    <span id="confirmPassword" class="text-danger">@ViewBag.confirmPassword</span>
+                </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary w-100 mt-3">Submit</button>
 
-        </form>
+            </form>
+        </div>
+        
     </main>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
 
     @section Scripts{
           <partial name="_ValidationScriptsPartial" />
